# aui-uve

./: .env  .gitignore  app.py  dev_requirements.txt  index.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  vite.config.ts
gw_ai/: __init__.py  settings.py
gw_ai/apis/: __init__.py  ai.py
gw_ai/ext/: dep.py  query_sql.py
gw_ai/ext/commons/: errors.py  rest.py
gw_ai/ext/utils/: gw_cipher.py  loader_utils.py  name_util.py  tree.py
src/: App.jsx  App.vue  index.css
src/components/: HelloWorld.vue
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx
web/src/apis/: api.js  index.js  request.js
