
[build-system]
  build-backend = "poetry.core.masonry.api"
  requires = ["poetry-core>=1.0.0"]

[tool]

  [tool.poetry]
    authors = ["chenjun <chencshan@gmail.com>"]
    description = ""
    name = "gw_ai_api"
    version = "0.1.0"

    [tool.poetry.dependencies]
      python = "^3.8"
      swagger-ui-assets = "^0.3.0"
      psycopg2 = "^2.9.3"
      Flask-Cors = "^3.0.10"
      Flask-SQLAlchemy = "^2.5.1"
      SQLAlchemy = "^1.4.25"
      toml = "^0.10.2"
      marshmallow ="^3.13.0"
    flask-marshmallow = "^0.15.0"
    flask-smorest = "^0.42.0"
    marshmallow-sqlalchemy = "^0.29.0"
    flask = "2.1.3"
    werkzeug = "2.0.1"

    [tool.poetry.dev-dependencies]
      autoflake = "^1.4"
      flake8 = "^4.0.1"
      yapf = "^0.32.0"

    [[tool.poetry.source]]
      default = true
      name = "pypi-group"
      url = "http://192.168.10.10:18081/repository/pypi-group/simple"